--- a/client/image-ui.css
+++ b/client/image-ui.css
@@ -8,6 +8,68 @@ body {
   line-height: 1.4em;
   background: #222;
   color: #fff;
+  font-family: "Helvetica Neue", HelveticaNeue,Helvetica,FreeSans,"Nimbus Sans L","Liberation Sans",Arial,sans-serif;
+}
+
+html, body {
+    margin: 0;
+    height: 100%;
+}
+
+section.banner {
+  box-sizing: border-box;
+  color: #222;
+  display: table;
+  font-size: 14px;
+  height: 619px;
+  min-height: 150px;
+  position: relative;
+  text-align: center;
+  text-rendering: optimizelegibility;
+  display: table;
+  text-align: center;
+}
+
+
+section.banner .background-image:before {
+  height: 0px;
+  padding: 0px 0px 100%;
+  padding-bottom: 100%;
+  background: url("/img/main3.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  -webkit-filter: blur(13px);
+  -moz-filter: blur(13px);
+  -o-filter: blur(13px);
+  -ms-filter: blur(13px);
+  filter: blur(8px);
+
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+
+section.banner h1 {
+  color: #FFF;
+  font-size: 3em;
+  font-weight: 200;
+  margin-bottom: 20px;
+  text-align: center;
+  top: 35%;
+  opacity: 0.5;
+  background: rgba(0, 0, 0, 0.2);
+  height: 2em;
+  line-height: 2em;
+
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 0;
 }
 
 .links {
@@ -29,10 +91,24 @@ body {
   overflow: hidden;
 }
 
+.blueimp-gallery > .control,
+.blueimp-gallery > .play-pause,
+.blueimp-gallery > .close {
+  font-size: 60px;
+  line-height: 60px;
+}
+
 @media only screen and (min-width: 24em) {
   .links a {
     width: 33.333%;
     height: 140px;
+  }
+
+  .blueimp-gallery > .control,
+  .blueimp-gallery > .play-pause,
+  .blueimp-gallery > .close {
+    font-size: 50px;
+    line-height: 50px;
   }
 }
 
@@ -41,12 +117,26 @@ body {
     width: 25%;
     height: 120px;
   }
+
+  .blueimp-gallery > .control,
+  .blueimp-gallery > .play-pause,
+  .blueimp-gallery > .close {
+    font-size: 40px;
+    line-height: 40px;
+  }
 }
 
 @media only screen and (min-width: 72em) {
   .links a {
     width: 10%;
     height: 100px;
+  }
+
+  .blueimp-gallery > .control,
+  .blueimp-gallery > .play-pause,
+  .blueimp-gallery > .close {
+    font-size: 30px;
+    line-height: 30px;
   }
 }
 
@@ -62,8 +152,6 @@ body {
   cursor: pointer;
   position: absolute;
   margin: 0 40px 0 0;
-  font-size: 20px;
-  line-height: 30px;
   color: #fff;
   text-shadow: 0 0 2px #000;
   opacity: .8;
