--- a/client/image-ui.css
+++ b/client/image-ui.css
@@ -35,7 +35,7 @@ section.banner .background-image:before {
   height: 0px;
   padding: 0px 0px 100%;
   padding-bottom: 100%;
-  background: url("/img/main3.jpg") no-repeat center center fixed;
+  background: url("/img/main.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
