--- a/client/image-ui.css
+++ b/client/image-ui.css
@@ -32,7 +32,7 @@ section.banner {
 
 
 section.banner .background-image:before {
-  height: 0px;
+  height: 100%;
   padding: 0px 0px 100%;
   padding-bottom: 100%;
   background: url("/img/main.jpg") no-repeat center center fixed;
