--- a/client/image-ui.css
+++ b/client/image-ui.css
@@ -109,6 +109,8 @@ section.banner h1 {
   margin-top: 100px;
   top: 0;
   bottom: 0;
+  background-color: #141414;
+  border-radius: 5px;
 }
 
 .qa div,
@@ -124,7 +126,7 @@ section.banner h1 {
 
 .qa .answer {
   margin-top: 10px;
-  background-color: #111;
+  background-color: #222;
   text-align: center;
   transition: background-color 0.2s ease-in-out;
 }
