--- a/client/image-ui.css
+++ b/client/image-ui.css
@@ -30,6 +30,24 @@ section.banner {
   text-align: center;
 }
 
+section.banner .gallery-link {
+  position: absolute;
+  width: 150px;
+  text-decoration: none;
+  font-size: 1.5em;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 12px 0px;
+  border-radius: 5px;
+  color: #ccc;
+  font-weight: 200;
+}
+
+section.banner .gallery-link:hover {
+  background: rgba(0, 0, 0, 0.8);
+  -moz-transform: scale(1.5);
+  zoom: 1.5;
+}
+
 section.banner .background-image:before {
   height: 100%;
   padding: 0px 0px 100%;
