disable slideshow until working for multiple galleries, add fade in for gallery links and fix timers for qa

--- a/client/image-ui.css
+++ b/client/image-ui.css
@@ -40,6 +40,13 @@ section.banner .gallery-link {
   color: #ccc;
   font-weight: 200;
   white-space: nowrap;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out; 
+}
+
+section.banner .gallery-link.show {
+  opacity: 1;
 }
 
 section.banner .gallery-link:hover {
