--- a/client/css/question.css
+++ b/client/css/question.css
@@ -1,3 +1,70 @@
+@-webkit-keyframes bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  40% {
+    -webkit-transform: scale(0.7);
+            transform: scale(0.7); } 
+}
+
+@keyframes bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  40% {
+    -webkit-transform: scale(0.7);
+            transform: scale(0.7); } 
+}
+
+.loader-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0;
+  pointer-events: none;
+  opacity: 0;
+  padding: 0;
+  background-color: #222;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.loader-container.show {
+  pointer-events: all;
+  opacity: 1.0;
+}
+
+.loader {
+  margin: 0 auto;
+  width: 100px;
+  text-align: center;
+  display: inline;
+}
+
+.loader .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s; 
+}
+
+.loader .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+.loader > div {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  border-radius: 100%;
+  background-color: #666;
+  margin-top: 10px;
+  -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+  animation: bouncedelay 1.4s infinite ease-in-out;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; 
+}
+
 .qa {
   text-align: center;
   margin-left: auto; 
@@ -24,16 +91,17 @@
   font-weight: 400;
 }
 
-.qa div,
+.qa > div,
 .qa form {
   padding: 10px;
 }
 
 .qa .answer {
+  position: relative;
   margin-top: 10px;
   background-color: #222;
   text-align: center;
-  transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.5s ease-in-out;
 }
 
 .qa .answer.incorrect {
@@ -78,7 +146,7 @@
 
   .qa .answer input[type="text"] {
     font-size: 2em;
-    line-height: 2em;
+    line-height: 1em;
     font-weight: 400;
   }
 }
@@ -101,7 +169,7 @@
 
   .qa .answer input[type="text"] {
     font-size: 2em;
-    line-height: 2em;
+    line-height: 1em;
     font-weight: 400;
   }
 }
@@ -124,7 +192,7 @@
 
   .qa .answer input[type="text"] {
     font-size: 1.8em;
-    line-height: 1.8em;
+    line-height: 0.9em;
     font-weight: 200;
   }
 }
