--- a/client/templates/question.html
+++ b/client/templates/question.html
@@ -2,7 +2,14 @@
   <div class="qa">
     <form>
       <div class="question">{{this}}</div>
-      <div class="answer {{cls}}">
+      <div class="answer">
+        <div class="loader-container {{loaderCls}}">
+            <div class="loader">
+                <div class="bounce1"></div>
+                <div class="bounce2"></div>
+                <div class="bounce3"></div>
+            </div>
+        </div>
         <input type="text" />
       </div>
     </form>
