re-add answer cls in template

--- a/client/templates/question.html
+++ b/client/templates/question.html
@@ -2,7 +2,7 @@
   <div class="qa">
     <form>
       <div class="question">{{this}}</div>
-      <div class="answer">
+      <div class="answer {{cls}}">
         <div class="loader-container {{loaderCls}}">
             <div class="loader">
                 <div class="bounce1"></div>
