--- a/client/templates/gallery-link.html
+++ b/client/templates/gallery-link.html
@@ -1,3 +1,3 @@
 <template name="GalleryLink">
-  <a href="{{_id}}" class="gallery-link {{linkCls}}">{{name}}</a>
+  <a href="/{{_id}}" class="gallery-link {{linkCls}}">{{name}}</a>
 </template>
