--- a/client/css/gallery-links.css
+++ b/client/css/gallery-links.css
@@ -18,6 +18,7 @@
 }
 
 .gallery-link:hover {
+  z-index: 1;
   background: rgba(0, 0, 0, 0.8);
   -ms-transform: scale(1.5);
   -moz-transform: scale(1.5);
