--- a/client/templates/gallery-link.html
+++ b/client/templates/gallery-link.html
@@ -1,3 +1,5 @@
 <template name="GalleryLink">
-  <a href="/{{_id}}" class="gallery-link {{linkCls}}">{{name}}</a>
+    <div class="gallery-link {{linkCls}}">
+        <a href="/{{_id}}">{{name}}</a>
+    </div>
 </template>
