--- a/client/templates/gallery.html
+++ b/client/templates/gallery.html
@@ -1,4 +1,5 @@
 <template name="Gallery">
+  <div class="home away"></div>
   <div class="wrapper {{questionCls}}">
     {{#if question}}
       {{> Question question}}
