--- a/client/css/gallery-links.css
+++ b/client/css/gallery-links.css
@@ -1,30 +1,62 @@
 .gallery-link {
-  position: absolute;
-  text-decoration: none;
   font-size: 2.5em;
-  background: rgba(0, 0, 0, 0.4);
-  padding: 20px;
-  border-radius: 5px;
-  color: #aaa;
   font-weight: 100;
   white-space: nowrap;
   opacity: 0;
-  -webkit-transition: opacity 0.2s ease-in-out;
-  transition: opacity 0.2s ease-in-out; 
+  -webkit-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out; 
+  text-align: center;
+  width: 100%;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  color: #aaa;
+  background: rgba(0, 0, 0, 0.4);
+  margin: 10px;
+  padding: 20px;
+  width:  250px;
+  text-align: center;
+  cursor: pointer;
+  opacity: 0;
 }
+
+/*@media only screen and (min-width: 24em) {
+  .gallery-link {
+    width: 45%;
+  }
+}
+
+@media only screen and (min-width: 48em) {
+  .gallery-link {
+    width: 30%;
+  }
+}
+
+@media only screen and (min-width: 72em) {
+  .gallery-link {
+    width: 25%;
+  }
+}*/
 
 .gallery-link.show {
   opacity: 1;
 }
 
+.gallery-link a {
+  white-space: pre-line;
+  text-align: center;
+  line-height: 1.2em;
+  text-decoration: none;
+  color: #ccc;
+}
+
 .gallery-link:hover {
   z-index: 1;
-  background: rgba(0, 0, 0, 0.8);
-  -ms-transform: scale(1.5);
+  background: rgba(0, 0, 0, 0.6);
+/*  -ms-transform: scale(1.5);
   -moz-transform: scale(1.5);
   -o-transform: scale(1.5);
   -webkit-transform: scale(1.5);
-  transform: scale(1.5);
+  transform: scale(1.5);*/
 }
 
 .links {
