--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,9 +1,10 @@
 <template name="Home">
-  <section class="banner">
-    {{#each galleries}}
-      {{> GalleryLink this}}
-    {{/each}}
-    <div class="background-image">
+  <div class="container">
+    <div class="banner">
+      {{#each galleries}}
+        {{> GalleryLink this}}
+      {{/each}}
+      <div class="background-image"></div>
     </div>
-  </section>
+  </div>
 </template>
