--- a/client/css/gallery.css
+++ b/client/css/gallery.css
@@ -1,3 +1,56 @@
+.home {
+  background: url("/img/home.svg") repeat scroll 0% 0% transparent;
+  background-repeat: no-repeat;
+  position: fixed;
+  left: 10px;
+  top: 10px;
+  z-index: 1;
+  cursor: pointer;
+  opacity: 0.6;
+  transition: opacity 0.5s ease-in-out;
+  width: 50px;
+  height: 50px;
+  background-size: 50px 50px;
+}
+
+@media only screen and (min-width: 24em) {
+  .home {
+    width: 40px;
+    height: 40px;
+    background-size: 40px 40px;
+  }
+}
+
+@media only screen and (min-width: 48em) {
+  .home {
+    width: 30px;
+    height: 30px;
+    background-size: 30px 30px;
+  }
+}
+
+@media only screen and (min-width: 72em) {
+  .home {
+    width: 25px;
+    height: 25px;
+    background-size: 25px 25px;
+  }
+}
+
+.container.phone .home {
+  width: 50px;
+  height: 50px;
+  background-size: 50px 50px;
+}
+
+.home:hover {
+  opacity: 1;
+}
+
+.home.away {
+  opacity: 0;
+}
+
 .blueimp-gallery > .control,
 .blueimp-gallery > .play-pause,
 .blueimp-gallery > .close {
