--- a/client/css/question.css
+++ b/client/css/question.css
@@ -197,3 +197,19 @@
     font-weight: 200;
   }
 }
+
+.container.phone .qa {
+  width: 100%;
+}
+
+.container.phone .qa .question {
+  font-size: 3em;
+  line-height: 1.2em;
+  font-weight: 200;
+}
+
+.container.phone .qa .answer input[type="text"] {
+  font-size: 4em;
+  line-height: 2em;
+  font-weight: 200;
+}
