--- a/client/templates/gallery.html
+++ b/client/templates/gallery.html
@@ -1,27 +1,29 @@
 <template name="Gallery">
-  <div class="home away"></div>
-  <div class="wrapper {{questionCls}}">
-    {{#if question}}
-      {{> Question question}}
-    {{else}}
-      <div id="blueimp-gallery" class="blueimp-gallery">
-          <div class="slides"></div>
-          <h3 class="title"></h3>
-          <a class="prev">‹</a>
-          <a class="next">›</a>
-          <a class="control">
-            {{#if hasControl}}&#9733;{{else}}&#9734;{{/if}}
-          </a>
-          <a class="close">×</a>
-          <a class="play-pause"></a>
-          <ol class="indicator"></ol>
-      </div>
+  <div class="container {{#if isPhone}}phone{{/if}}">
+    <div class="home away"></div>
+    <div class="wrapper {{questionCls}}">
+      {{#if question}}
+        {{> Question question}}
+      {{else}}
+        <div id="blueimp-gallery" class="blueimp-gallery">
+            <div class="slides"></div>
+            <h3 class="title"></h3>
+            <a class="prev">‹</a>
+            <a class="next">›</a>
+            <a class="control">
+              {{#if hasControl}}&#9733;{{else}}&#9734;{{/if}}
+            </a>
+            <a class="close">×</a>
+            <a class="play-pause"></a>
+            <ol class="indicator"></ol>
+        </div>
 
-      <div id="links" class="links">
-        {{#each images}}
-          {{> Image this}}
-        {{/each}}
-      </div>
-    {{/if}}
+        <div id="links" class="links">
+          {{#each images}}
+            {{> Image this}}
+          {{/each}}
+        </div>
+      {{/if}}
+    </div>
   </div>
 </template>
