--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,5 +1,5 @@
 <template name="Home">
-  <div class="container">
+  <div class="container {{#if isPhone}}phone{{/if}}">
     <div class="banner">
       {{#each galleries}}
         {{> GalleryLink this}}
