--- a/client/templates/question.html
+++ b/client/templates/question.html
@@ -10,7 +10,7 @@
                 <div class="bounce3"></div>
             </div>
         </div>
-        <input type="text" value="{{#if isCorrect}}&check;{{/if}}" />
+        <input type="password" value="{{#if isCorrect}}&check;{{/if}}" />
       </div>
     </form>
   </div>
